add enforcement of generated binaries (#12)

--- a/pom.xml
+++ b/pom.xml
@@ -115,6 +115,32 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-enforcer-plugin</artifactId>
+                <version>3.0.0-M3</version>
+                <executions>
+                    <execution>
+                        <id>enforce-binaries-generated</id>
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>enforce</goal>
+                        </goals>
+                        <configuration>
+                            <rules>
+                                <requireFilesExist>
+                                    <files>
+                                        <file>${project.build.directory}/classes/durable_task_monitor_darwin_amd64</file>
+                                        <file>${project.build.directory}/classes/durable_task_monitor_darwin_arm64</file>
+                                        <file>${project.build.directory}/classes/durable_task_monitor_linux_64</file>
+                                        <file>${project.build.directory}/classes/durable_task_monitor_linux_32</file>
+                                    </files>
+                                </requireFilesExist>
+                            </rules>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 
