[JENKINS-70428] create binary wrappers for linux ppc64le and arm64
go cross compilation is available for ppc64le and arm64
name the binaries according to the os.arch value of java
requires changes in the durable-task-plugin so the correct names are found.

--- a/src/Dockerfile.linux
+++ b/src/Dockerfile.linux
@@ -16,6 +16,8 @@ RUN CGO_ENABLED=0 GOOS=darwin GOARCH=amd64 go build -a -o ${NAME}_darwin_amd64
 RUN CGO_ENABLED=0 GOOS=darwin GOARCH=arm64 go build -a -o ${NAME}_darwin_arm64
 RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -a -o ${NAME}_linux_64
 RUN CGO_ENABLED=0 GOOS=linux GOARCH=386 go build -a -o ${NAME}_linux_32
+RUN CGO_ENABLED=0 GOOS=linux GOARCH=ppc64le go build -a -o ${NAME}_linux_ppc64le
+RUN CGO_ENABLED=0 GOOS=linux GOARCH=arm64 go build -a -o ${NAME}_linux_aarch64
 WORKDIR $BASE_DIR/cmd/windows
 RUN go mod tidy
 # can't test windows on linux
